reactive-marquee/src/App.css
.App {
  text-align: center;
}

.App-logo {
  
  pointer-events: none;

}

.container {
  background-color: rgb(177, 202, 183);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  padding-left: 3em;
  padding-right: 3em;

}

.layout {
  height: 16vh;
  margin: 2vh 5%;
}

.navlinks {
  display: flex;
  flex-direction: column;
  margin-top: .8em;
}

.navlinks__link {
  color: #fff;
  text-decoration: none;
  font-family: Helvetica, sans-serif;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.86;
  letter-spacing: normal;
  font-size: 1.2rem;
}

.navlinks__link--active {
  color: #ffc004;
}

.navlinks__link--unactive {
  color: #fff;
}

.navlinks__link--contact {
  float: right;
  padding: 0.5em 1.75em;
  border: solid 1px;
}

.slide_one {
  background-image: url(./background-images/slide_one.jpg);
  background-size: cover;
}
.slide_two {
  background-image: url(./background-images/slide_two.jpg);
  background-size: cover;
}
.slide_three {
  background-image: url(./background-images/slide_three.jpg);
  background-size: cover;
}

/* marquee css */

.marquee {
  height: 76vh;
  margin: 2vh 5%;
  margin-bottom: 0;
  display: grid;
  grid-template-areas: "headline subhead"
                       "cta cta";
  grid-template-rows: minmax(auto, auto) 20vh;
  grid-template-columns: 2fr 1fr;
  column-gap: 3rem;
  flex: 1 1;
  -webkit-flex: 1 1;
}

.headline {
  grid-area: headline;
  align-self: center;
  color: #fff;
  font-family: Helvetica, sans-serif;
  font-size: 5.25rem;
  line-height: 5.25rem;
  letter-spacing: -2.2px;
}

.subhead {
  grid-area: subhead;
  align-self: center;
  color: #fff;
  font-size: 0.875rem;
  line-height: 1.625rem;
  letter-spacing: normal;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  
}


/*cta css*/

.cta {
  background-color: #fff;
  color: #000;
  grid-area: cta;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.cta > p {
  position: relative;
  margin: 0 3vw;
  font-family: inherit;
  font-size: 1.5rem;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  line-height: 2rem;
  letter-spacing: -0.63px;
}

.navlinks__link--talk {
  text-decoration: none;
  color: #000;
  font-family: Helvetica, sans-serif;
  font-size: 0.87rem;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.82;
  letter-spacing: 1px;
  text-transform: uppercase;
  margin: 0 3vw;
}

.navlinks__link--talk > i {
  color: #ffc004;
  position: relative;
  font-size: 1.8rem;
  top: 1.1vh;
  left: .8vw;
}

@media only screen and (max-width: 720px) {
  .container {
    padding-left: 0;
    padding-right: 0;
  }

  .marquee {
 
    grid-template-areas: "headline"
                         "subhead"
                         "cta"
                         "cta";
    grid-template-rows: minmax(auto,auto) minmax(20vh,auto) 10vh 10vh;
  }

  .headline {
    align-self: end;
  }

  .subhead {
    align-self: start;
  }
  
  .cta {
    flex-direction: column;
    justify-content: space-evenly;
    
  }

  .cta > p {
   
    text-align: center;
  }

}

